--- a/Flash Card/index.html
+++ b/Flash Card/index.html
@@ -7,7 +7,25 @@
     <title>Flash Cards</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <div class="row">
+            <h1>Flashcards</h1>
+        </div>
+        <div class="row">
+            <div class="col">
+                <form>
+                    <label for="front">Front of Card</label>
+                    <textarea id="front" class="form-control" rows="3"></textarea>
+                    <label for="back">Back of Card</label>
+                    <textarea id="back" class="form-control" rows="3"></textarea>
+                    <button type="button" class="btn btn-primary btn-lg btn-block mt-3" id="btnSave">Save Card</button>
+                    </form>
+            </div>
+            <div class="col">
+                <h2>Make a Flash Card</h2>
+                <p>Let's make a flash card.  On the front of the flash card put the term or question you're trying to remember and the definition or answer on the back.</p>
+            </div>
+        </div>
     <script src="flashcards.js"></script>
     <!--- Bootstrap Required Libraries -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
